--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -21,7 +21,8 @@ jobs:
     - name: Install dependencies
       run: |
         conda install -c conda-forge glpk
-        pip install .
+        conda install conda-build
+        conda devlop .
     - name: Lint with flake8
       run: |
         # conda install flake8
