--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -6,6 +6,6 @@ conda:
 build:
     os: ubuntu-24.04
     tools:
-        python: 3.13
+        python: "3.13"
     commands:
         - ./doc/build_doc.sh ${SPHINX_PROJECT}
