--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,7 +1,8 @@
 version: 2
 
-conda:
-    environment: doc/environment.yml
+python:
+    install:
+      - requirements: docs/requirements.txt
 
 build:
     os: ubuntu-24.04
