--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,7 +2,7 @@ version: 2
 
 python:
     install:
-      - requirements: docs/requirements.txt
+      - requirements: doc/requirements.txt
 
 build:
     os: ubuntu-24.04
