--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -11,4 +11,4 @@ build:
     commands:
         - pip install sphinx sphinx-rtd-theme
         - mkdir -p $READTHEDOCS_OUTPUT/html/
-        - sphinx-build -n -b text doc $READTHEDOCS_OUTPUT/html/ 
+        - sphinx-build -n -b html doc $READTHEDOCS_OUTPUT/html/ 
