--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -34,3 +34,7 @@ jobs:
       run: |
         conda install pytest pytest-cov
         pytest --cov --cov-branch --cov-report=xml
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v5
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
