--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -2,14 +2,13 @@ version: 2
 
 python:
     install:
-      - requirements: doc/requirements.txt
+      - requirements: ./doc/requirements.txt
 
 build:
     os: ubuntu-24.04
     tools:
         python: "3.13"
     commands:
-        - ls -l .
         - mkdir -p $READTHEDOCS_OUTPUT/html/
         - sphinx-build -n -b html doc $READTHEDOCS_OUTPUT/html/ 
         - ls $READTHEDOCS_OUTPUT/html/
