--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -1,17 +1,64 @@
+# Read the Docs configuration file for Sphinx projects
+
+# See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
+
+
+# Required
+
 version: 2
 
-python:
-    install:
-      - requirements: ./doc/requirements.txt
+
+# Set the OS, Python version and other tools you might need
 
 build:
-    os: ubuntu-24.04
-    tools:
-        python: "3.13"
-    commands:
-        - ls -l ./
-        - ls -l ./doc/
-        - mkdir -p $READTHEDOCS_OUTPUT/html/
-        - sphinx-build -n -b html doc $READTHEDOCS_OUTPUT/html/ 
-        - ls $READTHEDOCS_OUTPUT/html/
 
+  os: ubuntu-22.04
+
+  tools:
+
+    python: "3.13"
+
+    # You can also specify other tool versions:
+
+    # nodejs: "20"
+
+    # rust: "1.70"
+
+    # golang: "1.20"
+
+
+# Build documentation in the "docs/" directory with Sphinx
+
+sphinx:
+
+  configuration: doc/conf.py
+
+  # You can configure Sphinx to use a different builder, for instance use the dirhtml builder for simpler URLs
+
+  # builder: "dirhtml"
+
+  # Fail on all warnings to avoid broken references
+
+  # fail_on_warning: true
+
+
+# Optionally build your docs in additional formats such as PDF and ePub
+
+# formats:
+
+#   - pdf
+
+#   - epub
+
+
+# Optional but recommended, declare the Python requirements required
+
+# to build your documentation
+
+# See https://docs.readthedocs.io/en/stable/guides/reproducible-builds.html
+
+python:
+
+  install:
+
+    - requirements: doc/requirements.txt
