--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -34,7 +34,9 @@ jobs:
       run: |
         conda install pytest pytest-cov
         pytest --cov --cov-branch --cov-report=xml
-    - name: Upload coverage reports to Codecov
-      uses: codecov/codecov-action@v5
+        pytest --cov --junitxml=junit.xml -o junit_family=legacy
+    - name: Upload test results to Codecov
+      if: ${{ !cancelled() }}
+      uses: codecov/test-results-action@v1
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
