--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,12 +1,10 @@
 name: Auto Format Python Code
 
-on: 
-  push:
+on:
+  pull_request_review:
+    types: [submitted, edited]
 
 jobs:
-  format:
-    runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
