--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,10 +1,12 @@
 name: Auto Format Python Code
 
 on:
-  pull_request_review:
-    types: [submitted, edited]
+  pull_request:
+    types: [opened, synchronize, reopened]
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
