--- a/.github/workflows/format.yml
+++ b/.github/workflows/format.yml
@@ -1,10 +1,12 @@
 name: Auto Format Python Code
 
 on:
-  pull_request_review:
-    types: [submitted, edited]
+  pull_request:
+    types: [opened, synchronize, reopened, edited]
 
 jobs:
+  format:
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -22,16 +24,7 @@ jobs:
       - name: Run Black
         run: |
           black .
-
-      - name: Run autopep8 aggressively
-        run: |
-          # Run autopep8 with aggressive mode (two passes)
-          autopep8 --in-place --aggressive --aggressive --recursive .
-
-      - name: Re-run Black to ensure consistency
-        run: |
-          black .
-
+          
       - name: Commit and push formatting changes
         run: |
           # Check if any files have been modified
@@ -40,7 +33,9 @@ jobs:
             git config --global user.email "github-actions@github.com"
             git add .
             git commit -m "Apply aggressive auto-formatting [skip ci]"
-            git push
+            # Pull the latest changes before pushing
+            git pull --rebase origin ${{ github.head_ref }}
+            git push origin HEAD:${{ github.head_ref }}
           else
             echo "No formatting changes detected."
           fi
