--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -18,7 +18,7 @@ jobs:
         echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda install -c conda-forge glpk
+        conda install -c conda-forge glpk pgmpy
         conda install conda-build
         pip install -e .
     - name: Lint with flake8
