--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -8,14 +8,18 @@ jobs:
 
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Python 3.11
+    - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: '3.11'
-    - name: Add conda to system path
+        python-version: '3.10'
+    - name: Configure Conda channels
       run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
+        conda config --add channels conda-forge
+        conda config --set channel_priority strict
+    - name: Create Conda environment
+      run: |
+        conda create -n myenv python=3.10 -y
+        conda activate myenv
     - name: Install dependencies
       run: |
         conda install -c conda-forge glpk pgmpy
@@ -24,9 +28,7 @@ jobs:
     - name: Lint with flake8
       run: |
         conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest & coverage
       run: |
