--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -12,14 +12,10 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: '3.10'
-    - name: Configure Conda channels
+    - name: Add conda to system path
       run: |
-        conda config --add channels conda-forge
-        conda config --set channel_priority strict
-    - name: Create Conda environment
-      run: |
-        conda create -n myenv python=3.10 -y
-        conda activate myenv
+        # $CONDA is an environment variable pointing to the root of the miniconda directory
+        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
         conda install -c conda-forge glpk pgmpy
