--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -16,11 +16,11 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
+    - name: Create conda environment
       run: |
+        conda create -n myenv python=3.10 -y
+        conda activate myenv
         conda install -c conda-forge glpk pgmpy
-        conda install conda-build
-        pip install -e .
     - name: Lint with flake8
       run: |
         conda install flake8
