--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -20,20 +20,15 @@ jobs:
       run: |
         # Assuming $CONDA is set to your miniconda root; otherwise, use $(conda info --base)
         source "$CONDA/etc/profile.d/conda.sh"
-        conda create -n myenv python=3.10 -y
-        conda activate myenv
-        conda install -c conda-forge glpk pgmpy conda-build
-        conda install munch
+        conda create -n -f pgmpy_env.yml
         pip install -e .
       shell: bash
     - name: Lint with flake8
       run: |
-        conda install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest & coverage
       run: |
-        conda install pytest pytest-cov
         pytest --cov --cov-branch --cov-report=xml
         pytest --cov --junitxml=junit.xml -o junit_family=legacy
     - name: Upload test results to Codecov
