--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -1,142 +1,142 @@
 name: pgmpy_env
 channels:
   - conda-forge
+  - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=51_gnu
-  - archspec=0.2.5=pyhd8ed1ab_0
-  - attrs=25.3.0=pyh71513ae_0
-  - beautifulsoup4=4.13.4=pyha770c72_0
-  - blas=1.0=openblas
-  - boltons=25.0.0=pyhd8ed1ab_0
-  - brotli-python=1.0.9=py311h419075a_9
-  - bzip2=1.0.8=h998d150_6
-  - c-ares=1.19.1=h998d150_0
-  - ca-certificates=2025.6.15=hbd8a1cb_0
-  - certifi=2025.6.15=pyhd8ed1ab_0
-  - cffi=1.17.1=py311hcb1262d_1
-  - chardet=5.2.0=pyhd8ed1ab_3
-  - charset-normalizer=3.4.2=pyhd8ed1ab_0
-  - click=8.2.1=pyh707e725_0
-  - colorama=0.4.6=pyhd8ed1ab_1
-  - conda=25.5.1=py311hd43f75c_0
-  - conda-build=25.5.0=py311he03a50d_0
-  - conda-index=0.6.1=pyhd8ed1ab_0
-  - conda-libmamba-solver=25.4.0=pyhd8ed1ab_0
-  - conda-package-handling=2.4.0=pyh7900ff3_2
-  - conda-package-streaming=0.11.0=pyhd8ed1ab_1
-  - cpp-expected=1.0.0=hdd96247_0
-  - distro=1.9.0=pyhd8ed1ab_1
-  - evalidate=2.0.5=pyhe01879c_0
-  - expat=2.7.1=h419075a_0
-  - filelock=3.18.0=pyhd8ed1ab_0
-  - flake8=7.1.1=py311hd43f75c_0
-  - fmt=9.1.0=hb8fdbf2_1
-  - frozendict=2.4.2=py311hd43f75c_0
-  - gmp=6.2.1=h7fd3ca4_0
-  - h2=4.2.0=pyhd8ed1ab_0
-  - hpack=4.1.0=pyhd8ed1ab_0
-  - hyperframe=6.1.0=pyhd8ed1ab_0
-  - icu=73.1=h419075a_0
-  - idna=3.10=pyhd8ed1ab_1
-  - importlib_resources=6.5.2=pyhd8ed1ab_0
-  - jinja2=3.1.6=pyhd8ed1ab_0
-  - jsonpatch=1.33=pyhd8ed1ab_1
-  - jsonpointer=2.0=py_0
-  - jsonschema=4.24.0=pyhd8ed1ab_0
-  - jsonschema-specifications=2025.4.1=pyh29332c3_0
-  - krb5=1.20.1=h2e2fba8_1
-  - ld_impl_linux-aarch64=2.40=h48e3ba3_0
-  - libarchive=3.7.7=h4086d46_0
-  - libcurl=8.12.1=hd336600_0
-  - libedit=3.1.20230828=h998d150_0
-  - libev=4.33=h516909a_1
-  - libffi=3.4.4=h419075a_1
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=11.2.0=h6e398d7_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libgomp=11.2.0=h1234567_1
-  - liblief=0.16.4=h419075a_0
-  - libmamba=2.0.5=h78dbd8a_1
-  - libmambapy=2.0.5=py311hb8fdbf2_1
-  - libnghttp2=1.57.0=hb788212_0
-  - libopenblas=0.3.29=h29fea54_0
-  - libsolv=0.7.30=h94b7715_1
-  - libssh2=1.11.1=hfa2bbb0_0
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libuuid=1.41.5=h998d150_0
-  - libxcb=1.17.0=hf66535e_0
-  - libxml2=2.13.8=h6097fa9_0
-  - lz4-c=1.9.4=h419075a_1
-  - markupsafe=3.0.2=pyhe1237c8_1
-  - mbedtls=3.5.1=h419075a_1
-  - mccabe=0.7.0=pyhd3eb1b0_0
-  - menuinst=2.2.0=py311hd43f75c_1
-  - msgpack-python=1.0.7=py311h419075a_0
-  - ncurses=6.4=h419075a_0
-  - nlohmann_json=3.12.0=h5ad3122_0
-  - numpy-base=2.0.1=py311h592f769_1
-  - openssl=3.0.16=h998d150_0
-  - packaging=25.0=pyh29332c3_1
-  - patch=2.7.6=hf897c2e_1002
-  - patchelf=0.17.2=h884eca8_0
-  - pcre2=10.42=hcfaa891_1
-  - pip=25.1=pyhc872135_2
-  - pkginfo=1.12.1.2=pyhd8ed1ab_0
-  - pkgutil-resolve-name=1.3.10=pyhd8ed1ab_2
-  - platformdirs=4.3.8=pyhe01879c_0
-  - pluggy=1.6.0=pyhd8ed1ab_0
-  - psutil=5.9.0=py311h998d150_1
-  - pthread-stubs=0.3=hfd63f10_1
-  - py-lief=0.16.4=py311h419075a_0
-  - pybind11-abi=4=hd8ed1ab_3
-  - pycodestyle=2.12.1=py311hd43f75c_0
-  - pycosat=0.6.6=py311h998d150_2
-  - pycparser=2.22=pyh29332c3_1
-  - pyflakes=3.2.0=py311hd43f75c_0
-  - pysocks=1.7.1=pyha55dd90_7
-  - pytest=8.4.1=py311hd43f75c_0
-  - python=3.11.13=hbb0f47a_0
-  - python-libarchive-c=5.3=pyhe01879c_0
-  - pytz=2025.2=pyhd8ed1ab_0
-  - pyyaml=6.0.2=pyhe1237c8_2
-  - readline=8.2=h998d150_0
-  - referencing=0.36.2=pyh29332c3_0
-  - reproc=14.2.3=hf897c2e_0
-  - reproc-cpp=14.2.3=h01db608_0
-  - requests=2.32.4=pyhd8ed1ab_0
-  - rpds-py=0.22.3=py311h657ad5b_0
-  - ruamel.yaml=0.18.10=py311h998d150_0
-  - ruamel.yaml.clib=0.2.12=py311h998d150_0
-  - setuptools=78.1.1=py311hd43f75c_0
-  - simdjson=3.10.1=hb8fdbf2_0
-  - soupsieve=2.7=pyhd8ed1ab_0
-  - spdlog=1.10.0=hdd96247_0
-  - sqlite=3.45.3=h998d150_0
-  - tk=8.6.14=hb5ae6a8_1
-  - toml=0.10.2=pyhd3eb1b0_0
-  - tqdm=4.67.1=pyhd8ed1ab_1
-  - truststore=0.10.1=pyh29332c3_0
-  - typing-extensions=4.14.0=h32cad80_0
-  - typing_extensions=4.14.0=pyhe01879c_0
-  - urllib3=2.5.0=pyhd8ed1ab_0
-  - wheel=0.45.1=py311hd43f75c_0
-  - xorg-libx11=1.8.12=hf66535e_1
-  - xorg-libxau=1.0.12=hf66535e_0
-  - xorg-libxdmcp=1.1.5=hf66535e_0
-  - xorg-xorgproto=2024.1=h998d150_1
-  - xz=5.6.4=h998d150_1
-  - yaml=0.2.5=hf897c2e_2
-  - yaml-cpp=0.8.0=h419075a_1
-  - zipp=3.23.0=pyhd8ed1ab_0
-  - zlib=1.2.13=h998d150_1
-  - zstandard=0.23.0=py311hc476304_1
-  - zstd=1.5.6=h6a09583_0
+  - _libgcc_mutex=0.1
+  - _openmp_mutex=5.1
+  - archspec=0.2.5
+  - attrs=25.3.0
+  - beautifulsoup4=4.13.4
+  - blas=1.0
+  - boltons=25.0.0
+  - brotli-python=1.0.9
+  - bzip2=1.0.8
+  - c-ares=1.19.1
+  - ca-certificates=2025.6.15
+  - certifi=2025.6.15
+  - cffi=1.17.1
+  - chardet=5.2.0
+  - charset-normalizer=3.4.2
+  - click=8.2.1
+  - colorama=0.4.6
+  - conda=25.5.1
+  - conda-build=25.5.0
+  - conda-index=0.6.1
+  - conda-libmamba-solver=25.4.0
+  - conda-package-handling=2.4.0
+  - conda-package-streaming=0.11.0
+  - cpp-expected=1.0.0
+  - distro=1.9.0
+  - evalidate=2.0.5
+  - expat=2.7.1
+  - filelock=3.18.0
+  - flake8=7.1.1
+  - fmt=9.1.0
+  - frozendict=2.4.2
+  - gmp=6.2.1
+  - h2=4.2.0
+  - hpack=4.1.0
+  - hyperframe=6.1.0
+  - icu=73.1
+  - idna=3.10
+  - importlib_resources=6.5.2
+  - jinja2=3.1.6
+  - jsonpatch=1.33
+  - jsonpointer=2.0
+  - jsonschema=4.24.0
+  - jsonschema-specifications=2025.4.1
+  - krb5=1.20.1
+  - ld_impl_linux-aarch64=2.40
+  - libarchive=3.7.7
+  - libcurl=8.12.1
+  - libedit=3.1.20230828
+  - libev=4.33
+  - libffi=3.4.4
+  - libgcc-ng=11.2.0
+  - libgfortran-ng=11.2.0
+  - libgfortran5=11.2.0
+  - libgomp=11.2.0
+  - liblief=0.16.4
+  - libmamba=2.0.5
+  - libmambapy=2.0.5
+  - libnghttp2=1.57.0
+  - libopenblas=0.3.29
+  - libsolv=0.7.30
+  - libssh2=1.11.1
+  - libstdcxx-ng=11.2.0
+  - libuuid=1.41.5
+  - libxcb=1.17.0
+  - libxml2=2.13.8
+  - lz4-c=1.9.4
+  - markupsafe=3.0.2
+  - mbedtls=4.5.1
+  - mccabe=0.7.0
+  - menuinst=2.2.0
+  - msgpack-python=1.0.7
+  - ncurses=6.4
+  - nlohmann_json=3.12.0
+  - openssl=3.0.16
+  - packaging=25.0
+  - patch=2.7.6
+  - patchelf=0.17.2
+  - pcre2=10.42
+  - pip=25.1
+  - pkginfo=1.12.1.2
+  - pkgutil-resolve-name=1.3.10
+  - platformdirs=4.3.8
+  - pluggy=1.6.0
+  - psutil=5.9.0
+  - pthread-stubs=0.3
+  - py-lief=0.16.4
+  - pybind11-abi=4
+  - pycodestyle=2.12.1
+  - pycosat=0.6.6
+  - pycparser=2.22
+  - pyflakes=3.2.0
+  - pygments=2.19.2
+  - pysocks=1.7.1
+  - pytest=8.4.1
+  - python=3.11.13
+  - python-libarchive-c=5.3
+  - pytz=2025.2
+  - pyyaml=6.0.2
+  - readline=8.2
+  - referencing=0.36.2
+  - reproc=14.2.3
+  - reproc-cpp=14.2.3
+  - requests=2.32.4
+  - rpds-py=0.22.3
+  - ruamel.yaml=0.18.10
+  - ruamel.yaml.clib=0.2.12
+  - setuptools=78.1.1
+  - simdjson=3.10.1
+  - soupsieve=2.7
+  - spdlog=1.10.0
+  - sqlite=3.45.3
+  - tk=8.6.14
+  - toml=0.10.2
+  - tqdm=4.67.1
+  - truststore=0.10.1
+  - typing-extensions=4.14.0
+  - typing_extensions=4.14.0
+  - urllib3=2.5.0
+  - wheel=0.45.1
+  - xorg-libx11=1.8.12
+  - xorg-libxau=1.0.12
+  - xorg-libxdmcp=1.1.5
+  - xorg-xorgproto=2024.1
+  - xz=5.6.4
+  - yaml=0.2.5
+  - yaml-cpp=0.8.0
+  - zipp=3.23.0
+  - zlib=1.2.13
+  - zstandard=0.23.0
+  - zstd=1.5.6
   - pip:
       - black==25.1.0
-      - conin==1.0
       - coverage==7.9.1
       - fsspec==2025.5.1
       - glpk==0.4.8
@@ -153,7 +153,6 @@ dependencies:
       - patsy==1.0.1
       - pgmpy==1.0.0
       - ply==3.11
-      - pygments==2.19.2
       - pyomo==6.9.2
       - pyro-api==0.1.2
       - pyro-ppl==1.9.1
