--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -19,10 +19,10 @@ jobs:
     - name: Create and activate conda environment
       run: |
         # Assuming $CONDA is set to your miniconda root; otherwise, use $(conda info --base)
+        source "$(conda info --base)/etc/profile.d/conda.sh"
         conda env create -f pgmpy_env.yml
         conda activate myenv
         pip install -e .
-        
       shell: bash
     - name: Lint with flake8
       run: |
