--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -21,7 +21,7 @@ jobs:
         # Assuming $CONDA is set to your miniconda root; otherwise, use $(conda info --base)
         source "$(conda info --base)/etc/profile.d/conda.sh"
         conda env create -f pgmpy_env.yml
-        conda activate myenv
+        conda activate pgmpy_env
         pip install -e .
       shell: bash
     - name: Lint with flake8
