--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -26,10 +26,12 @@ jobs:
       shell: bash
     - name: Lint with flake8
       run: |
+        conda install flake8
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest & coverage
       run: |
+        conda install pytest pytestcov
         pytest --cov --cov-branch --cov-report=xml
         pytest --cov --junitxml=junit.xml -o junit_family=legacy
     - name: Upload test results to Codecov
