--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -31,7 +31,7 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest & coverage
       run: |
-        conda install pytest pytestcov
+        conda install pytest pytest-cov
         pytest --cov --cov-branch --cov-report=xml
         pytest --cov --junitxml=junit.xml -o junit_family=legacy
     - name: Upload test results to Codecov
