--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -83,6 +83,7 @@ dependencies:
   - patch=2.7.6
   - patchelf=0.17.2
   - pcre2=10.42
+  - pgmpy=1.0.0
   - pip=25.1
   - pkginfo=1.12.1.2
   - pkgutil-resolve-name=1.3.10
@@ -151,7 +152,6 @@ dependencies:
       - pandas==2.3.0
       - pathspec==0.12.1
       - patsy==1.0.1
-      - pgmpy==1.0.0
       - ply==3.11
       - pyomo==6.9.2
       - pyro-api==0.1.2
