--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -112,6 +112,7 @@ dependencies:
   - rpds-py=0.22.3
   - ruamel.yaml=0.18.10
   - ruamel.yaml.clib=0.2.12
+  - scikit-learn=1.7.0
   - scipy=1.14.1
   - setuptools=78.1.1
   - simdjson=3.10.1
@@ -158,7 +159,6 @@ dependencies:
       - pyro-ppl==1.9.1
       - pytest-cov==6.2.1
       - python-dateutil==2.9.0.post0
-      - scikit-learn==1.7.0
       - six==1.17.0
       - statsmodels==0.14.4
       - sympy==1.14.0
