--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -1,166 +1,91 @@
 name: pgmpy_env
 channels:
   - conda-forge
-  - defaults
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1
   - _openmp_mutex=5.1
-  - archspec=0.2.5
-  - attrs=25.3.0
-  - beautifulsoup4=4.13.4
+  - black=24.10.0
   - blas=1.0
-  - boltons=25.0.0
-  - brotli-python=1.0.9
   - bzip2=1.0.8
-  - c-ares=1.19.1
   - ca-certificates=2025.6.15
-  - certifi=2025.6.15
-  - cffi=1.17.1
-  - chardet=5.2.0
-  - charset-normalizer=3.4.2
-  - click=8.2.1
-  - colorama=0.4.6
-  - conda=25.5.1
-  - conda-build=25.5.0
-  - conda-index=0.6.1
-  - conda-libmamba-solver=25.4.0
-  - conda-package-handling=2.4.0
-  - conda-package-streaming=0.11.0
-  - cpp-expected=1.0.0
-  - distro=1.9.0
-  - evalidate=2.0.5
+  - click=8.1.8
+  - coverage=7.6.9
   - expat=2.7.1
-  - filelock=3.18.0
-  - flake8=7.1.1
-  - fmt=9.1.0
-  - frozendict=2.4.2
-  - glpk=5.0
-  - gmp=6.2.1
-  - h2=4.2.0
-  - hpack=4.1.0
-  - hyperframe=6.1.0
-  - icu=73.1
-  - idna=3.10
-  - importlib_resources=6.5.2
-  - jinja2=3.1.6
-  - jsonpatch=1.33
-  - jsonpointer=2.0
-  - jsonschema=4.24.0
-  - jsonschema-specifications=2025.4.1
-  - krb5=1.20.1
+  - glpk=4.65
+  - gmp=6.3.0
+  - iniconfig=1.1.1
   - ld_impl_linux-aarch64=2.40
-  - libarchive=3.7.7
-  - libcurl=8.12.1
-  - libedit=3.1.20230828
-  - libev=4.33
   - libffi=3.4.4
-  - libgcc-ng=11.2.0
+  - libgcc=15.1.0
+  - libgcc-ng=15.1.0
   - libgfortran-ng=11.2.0
   - libgfortran5=11.2.0
-  - libgomp=11.2.0
-  - liblief=0.16.4
-  - libmamba=2.0.5
-  - libmambapy=2.0.5
-  - libnghttp2=1.57.0
+  - libgomp=15.1.0
+  - libnsl=2.0.1
   - libopenblas=0.3.29
-  - libsolv=0.7.30
-  - libssh2=1.11.1
+  - libsqlite=3.46.0
+  - libstdcxx=15.1.0
   - libstdcxx-ng=11.2.0
-  - libuuid=1.41.5
+  - libuuid=2.38.1
   - libxcb=1.17.0
-  - libxml2=2.13.8
-  - lz4-c=1.9.4
-  - markupsafe=3.0.2
-  - mccabe=0.7.0
-  - menuinst=2.2.0
-  - msgpack-python=1.0.7
+  - libzlib=1.2.13
+  - munch=2.5.0
+  - mypy_extensions=1.0.0
   - ncurses=6.4
-  - nlohmann_json=3.12.0
-  - openssl=3.0.16
-  - packaging=25.0
-  - patch=2.7.6
-  - patchelf=0.17.2
-  - pcre2=10.42
-  - pgmpy=1.0.0
+  - numpy=2.0.1
+  - numpy-base=2.0.1
+  - openssl=3.5.0
+  - packaging=24.2
+  - pathspec=0.10.3
   - pip=25.1
-  - pkginfo=1.12.1.2
-  - pkgutil-resolve-name=1.3.10
-  - platformdirs=4.3.8
-  - pluggy=1.6.0
-  - psutil=5.9.0
+  - platformdirs=4.3.7
+  - pluggy=1.5.0
+  - ply=3.11
   - pthread-stubs=0.3
-  - py-lief=0.16.4
-  - pybind11-abi=4
-  - pycodestyle=2.12.1
-  - pycosat=0.6.6
-  - pycparser=2.22
-  - pyflakes=3.2.0
-  - pygments=2.19.2
-  - pysocks=1.7.1
+  - pygments=2.19.1
+  - pyomo=6.9.2
   - pytest=8.4.1
-  - python=3.11.13
-  - python-libarchive-c=5.3
-  - pytz=2025.2
-  - pyyaml=6.0.2
+  - pytest-cov=6.0.0
+  - python=3.11.0
+  - python_abi=3.11
   - readline=8.2
-  - referencing=0.36.2
-  - reproc=14.2.3
-  - reproc-cpp=14.2.3
-  - requests=2.32.4
-  - rpds-py=0.22.3
-  - ruamel.yaml=0.18.10
-  - ruamel.yaml.clib=0.2.12
-  - scipy=1.14.1
   - setuptools=78.1.1
-  - simdjson=3.10.1
-  - soupsieve=2.7
-  - spdlog=1.10.0
+  - six=1.17.0
   - sqlite=3.45.3
   - tk=8.6.14
   - toml=0.10.2
-  - tqdm=4.67.1
-  - truststore=0.10.1
-  - typing-extensions=4.14.0
-  - typing_extensions=4.14.0
-  - urllib3=2.5.0
   - wheel=0.45.1
   - xorg-libx11=1.8.12
   - xorg-libxau=1.0.12
   - xorg-libxdmcp=1.1.5
   - xorg-xorgproto=2024.1
   - xz=5.6.4
-  - yaml=0.2.5
-  - yaml-cpp=0.8.0
-  - zipp=3.23.0
   - zlib=1.2.13
-  - zstandard=0.23.0
-  - zstd=1.5.6
   - pip:
-      - black==25.1.0
-      - coverage==7.9.1
+      - filelock==3.18.0
       - fsspec==2025.5.1
-      - iniconfig==2.1.0
+      - jinja2==3.1.6
       - joblib==1.5.1
+      - markupsafe==3.0.2
       - mpmath==1.3.0
-      - munch==4.0.0
-      - mypy-extensions==1.1.0
       - networkx==3.5
-      - numpy==2.3.1
       - opt-einsum==3.4.0
       - pandas==2.3.0
-      - pathspec==0.12.1
       - patsy==1.0.1
-      - ply==3.11
-      - pyomo==6.9.2
+      - pgmpy==1.0.0
+      - pyparsing==3.2.3
       - pyro-api==0.1.2
       - pyro-ppl==1.9.1
-      - pytest-cov==6.2.1
       - python-dateutil==2.9.0.post0
-      - six==1.17.0
+      - pytz==2025.2
+      - scikit-learn==1.7.0
+      - scipy==1.14.1
       - statsmodels==0.14.4
       - sympy==1.14.0
       - threadpoolctl==3.6.0
       - torch==2.7.1
+      - tqdm==4.67.1
+      - typing-extensions==4.14.0
       - tzdata==2025.2
