--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -16,23 +16,23 @@ jobs:
       run: |
         # $CONDA is an environment variable pointing to the root of the miniconda directory
         echo $CONDA/bin >> $GITHUB_PATH
-    - name: Install dependencies
+    - name: Create and activate conda environment
       run: |
-        conda install -c conda-forge glpk
-        conda install conda-build
-        pip install -e .
+        # Assuming $CONDA is set to your miniconda root; otherwise, use $(conda info --base)
+        source "$(conda info --base)/etc/profile.d/conda.sh"
+        conda env create -f pgmpy_env.yml
+        conda activate pgmpy_env
+      shell: bash
     - name: Lint with flake8
       run: |
         conda install flake8
-        # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with pytest & coverage
       run: |
         conda install pytest pytest-cov
-        pytest --cov --cov-branch --cov-report=xml
-        pytest --cov --junitxml=junit.xml -o junit_family=legacy
+        conda run -n pgmpy_env pytest --cov --cov-branch --cov-report=xml
+        conda run -n pgmpy_env pytest --cov --junitxml=junit.xml -o junit_family=legacy
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
       uses: codecov/test-results-action@v1
