--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -31,10 +31,9 @@ jobs:
     - name: Test with pytest & coverage
       run: |
         conda install pytest pytest-cov
-        conda run -n pgmpy_env pytest --cov --cov-branch --cov-report=xml
-        conda run -n pgmpy_env pytest --cov --junitxml=junit.xml -o junit_family=legacy
+        conda run -n pgmpy_env pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -o junit_family=legacy
     - name: Upload test results to Codecov
       if: ${{ !cancelled() }}
-      uses: codecov/test-results-action@v1
+      uses: codecov/codecov-action@v3
       with:
         token: ${{ secrets.CODECOV_TOKEN }}
