--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,6 @@ exclude_also = [
     'raise AssertionError',
     'raise NotImplementedError',
     '@(abc\.)?abstractmethod',
-    'if noisy:'
-    'if self.noisy:'
+    'if noisy:',
+    'if self.noisy:',
 ]
