--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,11 +29,16 @@ classifiers=[
 
 [tool.coverage.report]
 exclude_also = [
-    'if self.debug:',
-    'if debug:',
-    'raise AssertionError',
-    'raise NotImplementedError',
-    '@(abc\.)?abstractmethod',
-    'if noisy:',
-    'if self.noisy:',
+  'if self.debug:',
+  'if debug:',
+  'raise AssertionError.*',
+  'raise NotImplementedError.*',
+  '@(abc.)?abstractmethod',
+  'if noisy:',
+  'if self.noisy:',
+  'pragma: no cover',
+  'pass',
+  'except Exception as e:',
+  'except BaseException:',
+  'except ImportError:',
 ]
