--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -17,6 +17,7 @@ jobs:
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v2
         with:
+          miniconda-version: "latest"
           auto-update-conda: true
           python-version: 3.10
           environment-file: pgmpy_env.yml
