--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -5,7 +5,7 @@ channels:
   - https://repo.anaconda.com/pkgs/r
 dependencies:
   - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
+  - _openmp_mutex
   - black=24.10.0
   - blas=1.0
   - bzip2=1.0.8
