--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -20,7 +20,7 @@ jobs:
           miniconda-version: "latest"
           auto-update-conda: true
           python-version: 3.11
-          channels: conda-forge,defaults
+          channels: conda-forge,defaults,https://repo.anaconda.com/pkgs/main,https://repo.anaconda.com/pkgs/r
           environment-file: pgmpy_env.yml
           activate-environment: pgmpy_env
 
