--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -26,7 +26,10 @@ jobs:
 
       - name: Lint with flake8
         run: |
-          conda env list
+          which python
+          python --version
+          which flake8
+          conda info --envs
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
