--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Set up Miniconda
-        uses: conda-incubator/setup-miniconda@v2
+        uses: conda-incubator/setup-miniconda@v3
         with:
           miniconda-version: "latest"
           auto-update-conda: true
@@ -25,10 +25,8 @@ jobs:
           activate-environment: pgmpy_dev_env
       - name: Debug Conda Environment
         run: |
-          which python
-          python --version
-          which flake8
-          conda info --envs
+          conda info
+          conda list
       - name: Lint with flake8
         run: |
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
