--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -7,6 +7,9 @@ on:
 
 jobs:
   build:
+    defaults:
+      run:
+        shell: bash -el {0}
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
