--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -24,8 +24,8 @@ jobs:
           auto-update-conda: true
           python-version: 3.11
           channels: conda-forge,defaults,https://repo.anaconda.com/pkgs/main,https://repo.anaconda.com/pkgs/r
-          environment-file: pgmpy_dev_env.yml
-          activate-environment: pgmpy_dev_env
+          environment-file: dev_environment.yml
+          activate-environment: conin_dev
       - name: Debug Conda Environment
         run: |
           conda info
