--- a/pgmpy_env.yml
+++ b/pgmpy_env.yml
@@ -3,89 +3,17 @@ channels:
   - conda-forge
   - https://repo.anaconda.com/pkgs/main
   - https://repo.anaconda.com/pkgs/r
+channels:
+  - conda-forge
+  - https://repo.anaconda.com/pkgs/main
+  - https://repo.anaconda.com/pkgs/r
 dependencies:
-  - _libgcc_mutex=0.1
-  - _openmp_mutex=5.1
-  - black=24.10.0
-  - blas=1.0
-  - bzip2=1.0.8
-  - ca-certificates=2025.6.15
-  - click=8.1.8
-  - coverage=7.6.9
-  - expat=2.7.1
-  - glpk=4.65
-  - gmp=6.3.0
-  - iniconfig=1.1.1
-  - ld_impl_linux-aarch64=2.40
-  - libffi=3.4.4
-  - libgcc=15.1.0
-  - libgcc-ng=15.1.0
-  - libgfortran-ng=11.2.0
-  - libgfortran5=11.2.0
-  - libgomp=15.1.0
-  - libnsl=2.0.1
-  - libopenblas=0.3.29
-  - libsqlite=3.46.0
-  - libstdcxx=15.1.0
-  - libstdcxx-ng=11.2.0
-  - libuuid=2.38.1
-  - libxcb=1.17.0
-  - libzlib=1.2.13
-  - munch=2.5.0
-  - mypy_extensions=1.0.0
-  - ncurses=6.4
-  - numpy=2.0.1
-  - numpy-base=2.0.1
-  - openssl=3.5.0
-  - packaging=24.2
-  - pathspec=0.10.3
-  - pip=25.1
-  - platformdirs=4.3.7
-  - pluggy=1.5.0
-  - ply=3.11
-  - pthread-stubs=0.3
-  - pygments=2.19.1
-  - pyomo=6.9.2
-  - pytest=8.4.1
-  - pytest-cov=6.0.0
-  - python=3.11.0
-  - python_abi=3.11
-  - readline=8.2
-  - setuptools=78.1.1
-  - six=1.17.0
-  - sqlite=3.45.3
-  - tk=8.6.14
-  - toml=0.10.2
-  - wheel=0.45.1
-  - xorg-libx11=1.8.12
-  - xorg-libxau=1.0.12
-  - xorg-libxdmcp=1.1.5
-  - xorg-xorgproto=2024.1
-  - xz=5.6.4
-  - zlib=1.2.13
-  - pip:
-      - filelock==3.18.0
-      - fsspec==2025.5.1
-      - jinja2==3.1.6
-      - joblib==1.5.1
-      - markupsafe==3.0.2
-      - mpmath==1.3.0
-      - networkx==3.5
-      - opt-einsum==3.4.0
-      - pandas==2.3.0
-      - patsy==1.0.1
-      - pgmpy==1.0.0
-      - pyparsing==3.2.3
-      - pyro-api==0.1.2
-      - pyro-ppl==1.9.1
-      - python-dateutil==2.9.0.post0
-      - pytz==2025.2
-      - scikit-learn==1.7.0
-      - scipy==1.14.1
-      - statsmodels==0.14.4
-      - sympy==1.14.0
-      - threadpoolctl==3.6.0
-      - torch==2.7.1
-      - tqdm==4.67.1
-      - typing-extensions==4.14.0
-      - tzdata==2025.2
+  - pyomo
+  - munch
+  - numpy
+  - glpk
+  - pgmpy
+  - flake8
+  - pytest
+  - pytest-cov
+  - pip
