--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -10,6 +10,7 @@ dependencies:
   - glpk
   - pgmpy
   - flake8
+  - opt_einsum # This is a requirement of pgmpy that isn't being resolved properly
   - pytest
   - pytest-cov
 
