--- a/dev_environment.yml
+++ b/dev_environment.yml
@@ -8,9 +8,11 @@ dependencies:
   - munch
   - numpy
   - glpk
-  - pgmpy
   - flake8
-  - opt_einsum # This is a requirement of pgmpy that isn't being resolved properly
+  #- opt_einsum # This is a requirement of pgmpy that isn't being resolved properly
   - pytest
   - pytest-cov
+  - pip 
+  - pip:
+    - pgmpy
 
