--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -11,34 +11,40 @@ jobs:
       run:
         shell: bash -el {0}
     strategy:
+      fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
-
+      
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v3
         with:
           miniconda-version: "latest"
           auto-update-conda: true
-          python-version: 3.11
-          channels: conda-forge,defaults,https://repo.anaconda.com/pkgs/main,https://repo.anaconda.com/pkgs/r
+          python-version: ${{ matrix.python-version }}
+          channels: conda-forge,defaults
           environment-file: dev_environment.yml
           activate-environment: conin_dev
+          use-mamba: true  # Faster package resolution
+      
       - name: Install package
-        run: |
-          conda run -n conin_dev pip install -e .
+        run: pip install -e .
+      
       - name: Lint with flake8
         run: |
-          conda run -n conin_dev flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-          conda run -n conin_dev flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
       - name: Test with pytest & coverage
         run: |
-          conda run -n conin_dev pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -o junit_family=legacy -v
+          pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -v
+      
       - name: Upload test results to Codecov
-        if: ${{ !cancelled() }}
-        uses: codecov/codecov-action@v3
+        if: ${{ !cancelled() && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11' }}
+        uses: codecov/codecov-action@v4
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
