--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -1,5 +1,3 @@
-name: Github CI
-
 on:
   push:
     branches:
@@ -8,37 +6,45 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  build-linux:
-    runs-on: ubuntu-latest
-
+  build:
+    defaults:
+      run:
+        shell: bash -el {0}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest, macos-latest]
+        python-version: ["3.10", "3.11", "3.12", "3.13"]
+    runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.10
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.10'
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
-    - name: Create and activate conda environment
-      run: |
-        # Assuming $CONDA is set to your miniconda root; otherwise, use $(conda info --base)
-        source "$(conda info --base)/etc/profile.d/conda.sh"
-        conda env create -f pgmpy_env.yml
-        conda activate pgmpy_env
-      shell: bash
-    - name: Lint with flake8
-      run: |
-        conda install flake8
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
-    - name: Test with pytest & coverage
-      run: |
-        conda install pytest pytest-cov
-        conda run -n pgmpy_env pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -o junit_family=legacy
-    - name: Upload test results to Codecov
-      if: ${{ !cancelled() }}
-      uses: codecov/codecov-action@v3
-      with:
-        token: ${{ secrets.CODECOV_TOKEN }}
+      - uses: actions/checkout@v4
+      
+      - name: Set up Miniconda
+        uses: conda-incubator/setup-miniconda@v3
+        with:
+          miniconda-version: "latest"
+          auto-update-conda: true
+          python-version: ${{ matrix.python-version }}
+          channels: conda-forge,defaults
+          environment-file: dev_environment.yml
+          activate-environment: conin_dev
+          use-mamba: true  # Faster package resolution
+      
+      - name: Install package
+        run: pip install -e .
+      
+      - name: Lint with flake8
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+      
+      - name: Test with pytest & coverage
+        run: |
+          pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -v
+      
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() && matrix.os == 'ubuntu-latest' && matrix.python-version == '3.11' }}
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
