--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,14 +18,17 @@ classifiers=[
         "Operating System :: Unix",
         "Programming Language :: Python",
         "Programming Language :: Python :: 3",
-        #"Programming Language :: Python :: 3.7",
-        #"Programming Language :: Python :: 3.8",
-        "Programming Language :: Python :: 3.9",
         "Programming Language :: Python :: 3.10",
         "Programming Language :: Python :: 3.11",
+        "Programming Language :: Python :: 3.12",
+        "Programming Language :: Python :: 3.13",
         "Topic :: Scientific/Engineering :: Mathematics",
         "Topic :: Software Development :: Libraries :: Python Modules",
     ]
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["conin*"]
 
 [tool.coverage.report]
 exclude_also = [
