--- a/.github/workflows/conda.yml
+++ b/.github/workflows/conda.yml
@@ -4,20 +4,32 @@ on:
       - main
   pull_request:
     types: [opened, synchronize, reopened]
-
 jobs:
   build:
     defaults:
       run:
         shell: bash -el {0}
     strategy:
-      fail-fast: false
+      fail-fast: false # If something fails, we let everything else run
       matrix:
         os: [ubuntu-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
+      
+      # Cache conda environment
+      - name: Cache conda environment
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/conda_pkgs_dir
+            ~/.conda
+            ~/miniconda3/envs
+          key: conda-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('dev_environment.yml') }}
+          restore-keys: |
+            conda-${{ matrix.os }}-${{ matrix.python-version }}-
+            conda-${{ matrix.os }}-
       
       - name: Set up Miniconda
         uses: conda-incubator/setup-miniconda@v3
@@ -30,12 +42,22 @@ jobs:
           activate-environment: conin_dev
           use-mamba: true  # Faster package resolution
       
+      # Cache pip dependencies
+      - name: Cache pip dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.cache/pip
+          key: pip-${{ matrix.os }}-${{ matrix.python-version }}-${{ hashFiles('setup.py', 'pyproject.toml', 'requirements*.txt') }}
+          restore-keys: |
+            pip-${{ matrix.os }}-${{ matrix.python-version }}-
+            pip-${{ matrix.os }}-
+      
       - name: Install package
         run: pip install -e .
       
       - name: Lint with flake8
-        run: |
-          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        run: | # Things that will actually break code, and then just warnings
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics 
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       - name: Test with pytest & coverage
