--- a/codecov.yml
+++ b/codecov.yml
@@ -1,5 +1,6 @@
 coverage:
   status:
+    patch: false # Doesn't throw an error if you have less coverage than you started with
     project:
       default:
         # This setting enforces that your total (absolute) coverage must be at least 90%.
