--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -56,3 +56,10 @@ jobs:
       
       - name: Test with pytest
         run: pytest -v
+
+      - name: Run pytest withough pgmpy
+        run: | # You might not need to copy the environment, but I don't want to mess up the caching 
+          conda create --name conin_dev_no_pgmpy --clone conin_dev
+          conda activate conin_dev_no_pgmpy
+          pip uninstall -y pgmpy
+          pytest .
