--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -59,5 +59,5 @@ jobs:
 
       - name: Run pytest with pgmpy
         run: |
-          pip install -y pgmpy
+          pip install pgmpy
           pytest .
