--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -1,6 +1,12 @@
 name: Pytest Tests
 
 on:
+  workflow_run:
+    workflows: ["Code Coverage"]
+    types:
+      - completed
+    branches:
+      - main
   push:
     branches:
       - main
