Try to inject a new pgmpy installation?

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -50,7 +50,8 @@ jobs:
       - name: Install package
         run: |
             pip install -e .
-            pip install pgmpy
+            pip uninstall -y pgmpy
+            pip install -U pgmpy
 
       - name: Test with pytest & coverage
         run: pytest --cov --cov-branch --cov-report=xml --junitxml=junit.xml -vv
